# FPGA-project

./: .agent.md  .gitignore  CONSOLIDATION_COMPLETE.md  DEBUG_ANALYSIS.md  DEBUG_STATE.md  NEW_CHAT_PROMPT.md  README.md  RNG.md  SIM_FIX_GUIDE.md  compile_and_simulate.sh  diagnostics.sh  hier_ulti.txt  hier_util_ale.rpt  hier_util_new.rpt  hierarchical_util_led_top.rpt  hierarchical_utilization.rpt  site_percolation_fpga.md
.github/: copilot-instructions.md
.github/agents/: fpga-cose.agent.md
.github/hooks/: context-mode.json
RTL/: a_rng_pkg.vhd  b_rng_aes_ctr_prng.vhd  rng_trivium.vhd  tb_rng_double.vhd  zz_rng_hybrid_64.vhd
project/: FPGA-project.xpr  POTENTIAL_PROBLEMS.md  SIM_FIX_GUIDE.md  TEST_GUIDE.md  THRESHOLD_ERROR.md  hier_util.rpt  papers.md  recreate_vivado_project.tcl  recreate_vivado_project_FIXED.tcl  site_percolation_fpga.md  strategia_implementazione_fpga.md
project/code-from-paper-6/: ConfigMem.tcl  MD1.xpr  config.prm  program.tcl  vivado.jou
python/: README.md  pyproject.toml  requirements-analysis.txt  requirements.txt  try.py
python/percolation_uart/: __init__.py  benchmark.py  client.py  protocol.py  reference.py  transport.py
python/percolation_uart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uart_components/: Arty-A7-100-Master.xdc  BAUD.vhd  Multi_Word_Transmitter.vhd  New_UART.xpr  Reciver.vhd  StateMachine.vhd  Transmitter.vhd  tb_UART.vhd  tb_multi_transmitter.vhd  tb_reciver.vhd  tb_transmitter.vhd  top_Trasmitter.vhd  top_UART.vhd  top_multi_transmitter.vhd  top_reciver.vhd
(+184 files in other folders)
